// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatPage applies RTL styles for Persian assistant messages: persian-assistant-message 1`] = `
<article
  class="chat-message chat-message--assistant rtl"
  data-testid="chat-message-assistant"
  style="opacity: 0; transform: translateY(16px) translateZ(0);"
>
  <header
    class="chat-message__header"
  >
    <span
      class="chat-message__role"
    >
      Assistant
    </span>
    <div
      class="chat-message__actions"
    >
      <button
        aria-pressed="false"
        class="chat-bookmark-button"
        type="button"
      >
        Bookmark
      </button>
      <div
        class="chat-export-buttons"
      >
        <button
          class="chat-export-button"
          type="button"
        >
          Export PDF
        </button>
        <button
          class="chat-export-button"
          type="button"
        >
          Export Word
        </button>
      </div>
    </div>
  </header>
  <div
    class="chat-message__content"
  >
    <span>
      پاسخ فارسی
    </span>
  </div>
</article>
`;

exports[`ChatPage keeps LTR layout for non-Persian assistant messages: non-persian-assistant-message 1`] = `
<article
  class="chat-message chat-message--assistant"
  data-testid="chat-message-assistant"
  style="opacity: 0; transform: translateY(16px) translateZ(0);"
>
  <header
    class="chat-message__header"
  >
    <span
      class="chat-message__role"
    >
      Assistant
    </span>
    <div
      class="chat-message__actions"
    >
      <button
        aria-pressed="false"
        class="chat-bookmark-button"
        type="button"
      >
        Bookmark
      </button>
      <div
        class="chat-export-buttons"
      >
        <button
          class="chat-export-button"
          type="button"
        >
          Export PDF
        </button>
        <button
          class="chat-export-button"
          type="button"
        >
          Export Word
        </button>
      </div>
    </div>
  </header>
  <div
    class="chat-message__content"
  >
    <span>
      English answer
    </span>
  </div>
</article>
`;
